[package]
authors = ["Joshy Orndorff"]
edition = "2018"
name = "eutxo"
description = "A framework for building EUTXO-based blockchains on Substrate"
version = "0.1.0"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "serde",
    "frame-support/std",
    "frame-system/std",
]
